--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ODS.1</title>
+    <title>Herramienta pacto pobreza</title>
+    <link rel="icon" type="image/png" href="static/img/logo_ods_1.png"/>
     <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
             rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
@@ -30,9 +31,9 @@
         <nav class="navbar">
             <a href="/" class="text-left p-2 nav-menu hover-underline-animation">HOME</a>
             <div class="nav-menu">
-                <a href="#" class="text-right p-2 hover-underline-animation">ODS</a>
-                <a href="#" class="text-right p-2 hover-underline-animation">EQUIPO</a>
-                <a href="#" class="text-right p-2 hover-underline-animation">CONTACTO</a> 
+                <a href="#herramienta-trabajo" class="text-right p-2 hover-underline-animation">Herramienta</a>
+                <a href="templates/grupo_trabajo.html" class="text-right p-2 hover-underline-animation">Grupo de trabajo</a>
+                <a href="docs/Pacto-contra-la-Pobreza-cas-2.pdf" class="text-right p-2 hover-underline-animation" target="_blank">Pacto</a>
             </div>
         </nav>
 
@@ -56,20 +57,40 @@
             <!-- <h2 class="fancy" style="--w: 50vw;--c: #79c48a;--b:4px;--g:-5px">Con la colaboración de</h2>  -->
             <br>
             <br>
-            <div class="row">
-                <div class="col">
-                    <img src="static/img/colaboraciones/upna/color/ROJO_UPNA_300ppp.png" width="200px" height="100px" alt="colaborador" class="mx-4">
-                </div>
-                <div class="col">
-                    <img src="static/img/colaboraciones/Gobierno de Navarra.jpg" width="300px" height="100px"  alt="colaborador" class="mx-4">
-                </div>
-                <div class="col">
-                    <img src="static/img/colaboraciones/logo-parlamento.png" width="200px" height="100px"  alt="colaborador" class="mx-4">
-                </div>
-                <div class="col">
-                    <img src="static/img/colaboraciones/PES.png" width="200px" height="100px"  alt="colaborador" class="mx-4">
-                </div>
+            <div class="image-row">
+                <img src="static/img/colaboraciones/upna/color/ROJO_UPNA_300ppp.png" width="200px" height="100px" alt="colaborador" class="mx-4">
+                <img src="static/img/colaboraciones/logo-parlamento.png" width="200px" height="100px"  alt="colaborador" class="mx-4">
+                <img src="static/img/colaboraciones/logo Red.png" width="200px" height="100px"  alt="colaborador" class="mx-4">
+                <img src="static/img/colaboraciones/logo-cermin.png" width="200px" height="100px"  alt="colaborador" class="mx-4">
+                <img src="static/img/colaboraciones/Logo20REASNa2000px.png" width="200px" height="100px"  alt="colaborador" class="mx-4">
+                <img src="static/img/colaboraciones/Coordinadora logo.jpg" width="200px" height="100px"  alt="colaborador" class="mx-4">
             </div>
+            <!-- <div class="row">
+                <div class="col">
+                    <img src="static/img/colaboraciones/upna/color/ROJO_UPNA_300ppp.png" width="100px" height="100px" alt="colaborador" class="mx-4">
+                </div>
+
+                <div class="col">
+                    <img src="static/img/colaboraciones/logo-parlamento.png" width="100px" height="100px"  alt="colaborador" class="mx-4">
+                </div>
+
+                <div class="col">
+                    <img src="static/img/colaboraciones/logo Red.png" width="100px" height="100px"  alt="colaborador" class="mx-4">
+                </div>
+
+                <div class="col">
+                    <img src="static/img/colaboraciones/logo-cermin.png" width="100px" height="100px"  alt="colaborador" class="mx-4">
+                </div>
+
+                <div class="col">
+                    <img src="static/img/colaboraciones/Logo20REASNa2000px.png" width="100px" height="100px"  alt="colaborador" class="mx-4">
+                </div>
+
+                <div class="col">
+                    <img src="static/img/colaboraciones/Coordinadora logo.jpg" width="100px" height="100px"  alt="colaborador" class="mx-4">
+                </div>
+
+            </div> -->
         </div>
     </div>
     <!-- end of panel logos ONGs -->
@@ -79,27 +100,51 @@
             <br>
             <h2 class="fancy" style="--w: 50vw;--c: #79c48a;--b:4px;--g:-5px">Sobre el pacto</h2> 
             <br>
-            <div class="text-about fancy-text">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-                    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-                <br>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-                    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
+            <div class="row">
+                <div class="col-sm-2 p-2">
+                    <img src="static/img/logo_ods_1.png" alt="" width="250px" height="250px">
+                </div>
+                <div class="col">
+                    <div class="text-about fancy-text">
+                        <p>
+                            En el año 2019, en el marco de la conmemoración del Día Internacional para la Erradicación de la Pobreza, 
+                            el Parlamento de Navarra se comprometió, por unanimidad, a desarrollar un nuevo 
+                            Pacto Navarro Contra la Pobreza y la Desigualdad junto con la Plataforma de Entidades Sociales (PES), 
+                            que renovase y actualizase el firmado en 2007.                            
+                        </p>
+                        <p>
+                            El Pacto Navarro Contra la Pobreza y la Desigualdad fue firmado por los diferentes Grupos Parlamentarios que 
+                            formaban la cámara navarra en el momento de la firma (año 2021). 
+                            El Pacto gira en torno a la Agenda 2030, en la que aparecen 17 Objetivos de desarrollo sostenible (ODS) que deben ser cumplidos de 2021 a 2030.
+                        </p>
+                        <p>
+                            Para cada ODS, aparecen asociadas ciertas medidas estructuradas en tres grupos (legislativo, control y económico) que deben haber sido cumplidas en 2030. 
+                            Sin embargo, en el periodo comprendido entre 2021 y 2030 existen varias fechas clave que deben ser tenidas en cuenta. 
+                            En orden cronológico, las evaluaciones se realizarán de la siguiente forma:
+                        </p>
+                        <ul>
+                            <li>En 2023 se evaluarán las medidas del pacto que ya han sido conseguidas.</li>
+                            <li>En 2026 se realizará una nueva evaluación de las medidas cumplidas.</li>
+                            <li>En 2028 se volverán a evaluar las medidas.</li>
+                            <li>En 2030 se llevará a cabo la evaluación final.</li>
+                        </ul>
+                        <p>
+                            El Parlamento de Navarra acordó con la Universidad Pública de Navarra la elaboración de la 
+                            herramienta metodológica de evaluación del cumplimiento del Pacto, lo que supone programar 
+                            las acciones que deben tomarse para el cumplimiento del Pacto, dar la responsabilidad de 
+                            estas acciones a quienes deban tenerla, crear indicadores de control y cumplimiento, 
+                            vincular las medidas a los objetivos correspondientes y establecer las metas o los resultados esperados para cada indicador.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+    
 
     <!-- Panel links ODS [1, 2, 3, ...] -->
     <div class="panel-ods">
-        <h2 class="fancy" style="--w: 50vw;--c: #79c48a;--b:4px;--g:-5px">Objetivos Desarrollo Sostenible</h2> 
+        <h2 class="fancy" style="--w: 50vw;--c: #79c48a;--b:4px;--g:-5px" id="herramienta-trabajo">Herramienta evaluación del pacto</h2> 
         <div class="team-grid">
             <div class="container">
 
@@ -325,6 +370,10 @@
     </div>
     <!-- end of panel links ODS -->
 
+    <div class="panel-cumplimiento">
+        <h2 class="fancy" style="--w: 50vw;--c: #79c48a;--b:4px;--g:-5px" id="herramienta-trabajo">Cumplimiento del pacto</h2> 
+    </div>
+
     <div class="panel-footer"></div>
 
     <!-- end of content -->
@@ -336,3 +385,5 @@
     <!-- end of Bootstrap JS -->
 </body>
 </html>
+
+<!-- ODS Prioridad -> 1, 3, 4, 5 |  -->
