ods-4-all added

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
             <h2 class="fancy" style="--w: 50vw;--c: #79c48a;--b:4px;--g:-5px">Sobre el pacto</h2> 
             <br>
             <div class="row">
-                <div class="col-sm-2 p-2">
+                <!-- <div class="col-sm-2 p-2">
                     <img src="static/img/logo_ods_1.png" alt="" width="250px" height="250px">
-                </div>
+                </div> -->
                 <div class="col">
                     <div class="text-about fancy-text">
                         <p>
@@ -169,7 +169,7 @@
                                 <div class="d-grid gap-2 col-6 mx-auto">
                                     <a class="btn btn-outline-success rounded" href="templates/ods/ods-02/ods-02-legislativa.html">Legislativa</a>
                                     <a class="btn btn-outline-success rounded" href="templates/ods/ods-02/ods-02-control.html">Control</a>
-                                    <a class="btn btn-outline-success rounded" href="templates/ods/ods-02/ods-02-control.html">Económica</a>
+                                    <a class="btn btn-outline-success rounded" href="templates/ods/ods-02/ods-02-economica.html">Económica</a>
                                   </div>
                             </div>
                         </div>
@@ -181,7 +181,7 @@
                                 <div class="d-grid gap-2 col-6 mx-auto">
                                     <a class="btn btn-outline-success rounded" href="templates/ods/ods-03/ods-03-legislativa.html">Legislativa</a>
                                     <a class="btn btn-outline-success rounded" href="templates/ods/ods-03/ods-03-control.html">Control</a>
-                                    <a class="btn btn-outline-success rounded" href="templates/ods/ods-03/ods-03-control.html">Económica</a>
+                                    <a class="btn btn-outline-success rounded" href="templates/ods/ods-03/ods-03-economica.html">Económica</a>
                                   </div>
                             </div>
                         </div>
@@ -191,9 +191,9 @@
                             <div class="cover">
                                 <h3 class="name">FUNCIONES</h3>
                                 <div class="d-grid gap-2 col-6 mx-auto">
-                                    <a class="btn btn-outline-success rounded" href="templates/ods/ods-06/ods-06-legislativa.html">Legislativa</a>
-                                    <a class="btn btn-outline-success rounded" href="templates/ods/ods-06/ods-06-control.html">Control</a>
-                                    <a class="btn btn-outline-success rounded" href="templates/ods/ods-06/ods-06-control.html">Económica</a>
+                                    <a class="btn btn-outline-success rounded" href="templates/ods/ods-04/ods-04-legislativa.html">Legislativa</a>
+                                    <a class="btn btn-outline-success rounded" href="templates/ods/ods-04/ods-04-control.html">Control</a>
+                                    <a class="btn btn-outline-success rounded" href="templates/ods/ods-04/ods-04-economica.html">Económica</a>
                                   </div>
                             </div>
                         </div>
