--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
         <!-- Navigation menu bar -->
         <nav class="navbar">
-            <a href="/" class="text-left p-2 nav-menu hover-underline-animation">HOME</a>
+            <a href="index.html" class="text-left p-2 nav-menu hover-underline-animation">HOME</a>
             <div class="nav-menu">
                 <a href="#herramienta-trabajo" class="text-right p-2 hover-underline-animation">Herramienta</a>
                 <a href="templates/grupo_trabajo.html" class="text-right p-2 hover-underline-animation">Grupo de trabajo</a>
-                <a href="docs/Pacto-contra-la-Pobreza-cas-2.pdf" class="text-right p-2 hover-underline-animation" target="_blank">Pacto</a>
+                <a href="/docs/Pacto-contra-la-Pobreza-cas-2.pdf" class="text-right p-2 hover-underline-animation" target="_blank">Pacto</a>
             </div>
         </nav>
 
