--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="nav-menu">
                 <a href="#herramienta-trabajo" class="text-right p-2 hover-underline-animation">Herramienta</a>
                 <a href="templates/grupo_trabajo.html" class="text-right p-2 hover-underline-animation">Grupo de trabajo</a>
-                <a href="/docs/Pacto-contra-la-Pobreza-cas-2.pdf" class="text-right p-2 hover-underline-animation" target="_blank">Pacto</a>
+                <a href="docs/Pacto-contra-la-Pobreza-cas-2.pdf" class="text-right p-2 hover-underline-animation" target="_blank">Pacto</a>
             </div>
         </nav>
 
@@ -324,10 +324,7 @@
                             <div class="cover">
                                 <h3 class="name">FUNCIONES</h3>
                                 <div class="d-grid gap-2 col-6 mx-auto">
-                                    <a class="btn btn-outline-success rounded" href="templates/ods/ods-06/ods-06-legislativa.html">Legislativa</a>
-                                    <a class="btn btn-outline-success rounded" href="templates/ods/ods-06/ods-06-control.html">Control</a>
-                                    <a class="btn btn-outline-success rounded" href="templates/ods/ods-06/ods-06-control.html">Económica</a>
-                                  </div>
+                                    <a class="btn btn-outline-success rounded" href="templates/ods/ods-15/ods-15-control.html">Control</a>                                  </div>
                             </div>
                         </div>
                     </div>
@@ -337,9 +334,8 @@
                             <div class="cover">
                                 <h3 class="name">FUNCIONES</h3>
                                 <div class="d-grid gap-2 col-6 mx-auto">
-                                    <a class="btn btn-outline-success rounded" href="templates/ods/ods-06/ods-06-legislativa.html">Legislativa</a>
-                                    <a class="btn btn-outline-success rounded" href="templates/ods/ods-06/ods-06-control.html">Control</a>
-                                    <a class="btn btn-outline-success rounded" href="templates/ods/ods-06/ods-06-control.html">Económica</a>
+                                    <a class="btn btn-outline-success rounded" href="templates/ods/ods-16/ods-16-legislativa.html">Legislativa</a>
+                                    <a class="btn btn-outline-success rounded" href="templates/ods/ods-16/ods-16-control.html">Control</a>
                                   </div>
                             </div>
                         </div>
@@ -350,9 +346,8 @@
                             <div class="cover">
                                 <h3 class="name">FUNCIONES</h3>
                                 <div class="d-grid gap-2 col-6 mx-auto">
-                                    <a class="btn btn-outline-success rounded" href="templates/ods/ods-06/ods-06-legislativa.html">Legislativa</a>
-                                    <a class="btn btn-outline-success rounded" href="templates/ods/ods-06/ods-06-control.html">Control</a>
-                                    <a class="btn btn-outline-success rounded" href="templates/ods/ods-06/ods-06-control.html">Económica</a>
+                                    <a class="btn btn-outline-success rounded" href="templates/ods/ods-17/ods-17-legislativa.html">Legislativa</a>
+                                    <a class="btn btn-outline-success rounded" href="templates/ods/ods-17/ods-17-control.html">Control</a>
                                   </div>
                             </div>
                         </div>
