--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="nav-menu">
                 <a href="#herramienta-trabajo" class="text-right p-2 hover-underline-animation">Herramienta</a>
                 <a href="templates/grupo_trabajo.html" class="text-right p-2 hover-underline-animation">Grupo de trabajo</a>
-                <a href="docs/Pacto-contra-la-Pobreza-cas-2.pdf" class="text-right p-2 hover-underline-animation" target="_blank">Pacto</a>
+                <a href="https://parlamentodenavarra.es/sites/default/files/noticias-archivos-adjuntos/22-2-21Pacto%20Navarro%20contra%20la%20Pobreza%20y%20la%20desigualdad.pdf" class="text-right p-2 hover-underline-animation" target="_blank">Pacto</a>
             </div>
         </nav>
 
